fail_crate/tests/explicit_unit_default.stderr
error: `default` can be skipped for fields that have automatic defaults (`()` or `PhantomData`).
 --> fail_crate/tests/explicit_unit_default.rs:5:5
  |
5 | /     #[new(default)]
6 | |     x: (),
  | |_________^
