fail_crate/tests/explicit_unit_default.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(default)]
    x: (),
}

fn main() {}
